--- a/app/src/main/res/layout/item_card_view.xml
+++ b/app/src/main/res/layout/item_card_view.xml
@@ -17,12 +17,13 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:background="@drawable/ng"
+            android:contentDescription="@string/placeholder_image"
             android:scaleType="centerCrop"/>
         <TextView
             android:id="@+id/item_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Title"
+            android:text="@string/title_placeholder"
             android:textSize="16sp"
             android:layout_margin="12dp"
             android:textAppearance="?attr/textAppearanceHeadline6"
