--- a/app/src/main/res/layout/fragment_finished.xml
+++ b/app/src/main/res/layout/fragment_finished.xml
@@ -7,13 +7,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.finished.FinishedFragment">
 
+    <TextView
+        android:id="@+id/finished_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/these_might_interest_you"
+        android:textSize="18sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:padding="16dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_finished"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/item_card_view"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/finished_header"
+        tools:listitem="@layout/item_card_view" />
 
     <ProgressBar
         android:id="@+id/progressBar2"
