--- a/app/src/main/res/layout/fragment_upcoming.xml
+++ b/app/src/main/res/layout/fragment_upcoming.xml
@@ -6,14 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.upcoming.UpcomingFragment">
 
+    <TextView
+        android:id="@+id/upcoming_header"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/recommended_event_for_you"
+        android:textSize="18sp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:padding="16dp"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_upcoming"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        tools:listitem="@layout/item_card_view"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@+id/upcoming_header"
+        tools:listitem="@layout/item_card_view" />
 
     <ProgressBar
         android:id="@+id/progressBar1"
