--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -26,6 +26,7 @@
 
             <ImageView
                 android:id="@+id/image_placeholder"
+                android:contentDescription="@string/placeholder_image"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/ng"
