--- a/app/src/main/res/layout/fragment_finished.xml
+++ b/app/src/main/res/layout/fragment_finished.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_constraintBottom_toTopOf="parent"
     tools:context=".ui.finished.FinishedFragment">
 
     <TextView
@@ -21,6 +22,7 @@
         android:id="@+id/rv_finished"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="50dp"
         app:layout_constraintTop_toBottomOf="@+id/finished_header"
         tools:listitem="@layout/item_card_view" />
 
