--- a/app/src/main/res/layout/fragment_upcoming.xml
+++ b/app/src/main/res/layout/fragment_upcoming.xml
@@ -20,6 +20,7 @@
         android:id="@+id/rv_upcoming"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="50dp"
         app:layout_constraintTop_toBottomOf="@+id/upcoming_header"
         tools:listitem="@layout/item_card_view" />
 
