--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.favorite.FavoriteFragment">
 
     <TextView
-        android:id="@+id/upcoming_header"
+        android:id="@+id/event_header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/here_s_your_favorite_events"
@@ -21,8 +21,22 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="50dp"
-        app:layout_constraintTop_toBottomOf="@+id/upcoming_header"
+        app:layout_constraintTop_toBottomOf="@+id/event_header"
         tools:listitem="@layout/item_card_view" />
+
+    <TextView
+        android:id="@+id/no_event_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/event"
+        android:visibility="invisible"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <ProgressBar
         android:id="@+id/progressBar4"
