--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,12 +1,18 @@
 <resources>
     <!-- Reply Preference -->
     <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
+        <item>Need improvement</item>
+        <item>Decent</item>
+        <item>Mid</item>
+        <item>Good</item>
+        <item>Excellent</item>
     </string-array>
 
     <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
+        <item>Need improvement</item>
+        <item>Decent</item>
+        <item>Mid</item>
+        <item>Good</item>
+        <item>Excellent</item>
     </string-array>
 </resources>
