--- a/app/src/main/res/layout-w936dp/content_scrolling.xml
+++ b/app/src/main/res/layout-w936dp/content_scrolling.xml
@@ -16,6 +16,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/detail_owner"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:textAlignment="center"
+            android:textSize="16sp" />
+
+        <TextView
             android:id="@+id/detail_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
